--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       - LLAMA_MODEL_PATH=${LLAMA_MODEL_PATH}
     volumes:
       - ./vectorstore:/app/vectorstore
+
+  cloudflared_prophecy_rfp_bot:
+    container_name: cloudflared_prophecy_rfp_bot
+    restart: unless-stopped
+    image: cloudflare/cloudflared:latest
+    command:  tunnel --no-autoupdate run --token eyJhIjoiMzhmZjkwZWMwYTFkOGJiMzJiY2EyYTBmNzgzYmY4Y2EiLCJ0IjoiYjI4NGVkZmQtMzNjOC00MTMzLTlmZTEtN2ExMzk1OTMwMmMyIiwicyI6Ik9XTXpPVEpoTXpNdFlqQTJNQzAwWlRVeExUa3dZelF0TkdGa05tWTFZalZqWm1aaiJ9
+
