removed token from docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,14 @@ services:
     build: .
     ports:
       - '5055:5055'
-    environment:
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - API_KEY=${API_KEY}
-      - LLAMA_MODEL_PATH=${LLAMA_MODEL_PATH}
+    env_file: .env
     volumes:
       - ./vectorstore:/app/vectorstore
 
   cloudflared_prophecy_rfp_bot:
     container_name: cloudflared_prophecy_rfp_bot
+    env_file: .env
     restart: unless-stopped
     image: cloudflare/cloudflared:latest
-    command:  tunnel --no-autoupdate run --token eyJhIjoiMzhmZjkwZWMwYTFkOGJiMzJiY2EyYTBmNzgzYmY4Y2EiLCJ0IjoiYjI4NGVkZmQtMzNjOC00MTMzLTlmZTEtN2ExMzk1OTMwMmMyIiwicyI6Ik9XTXpPVEpoTXpNdFlqQTJNQzAwWlRVeExUa3dZelF0TkdGa05tWTFZalZqWm1aaiJ9
+    command:  tunnel --no-autoupdate run --token ${CLOUDFLARED_TOKEN}
 
